src/main/metadata-excluded/objects/LOV__c.object
<CustomObject>
    <description>Survey Flow: Store picklist &amp; dependend picklist data. Used in Survey Flow
Created by Chris Huang, 2013-4-8.</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>Store answer code.</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>External Id, auto updated equals &apos;Type + Level One + Level Two&apos;.</description>
        <externalId>true</externalId>
        <label>*Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_One__c</fullName>
        <label>Level One</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Two__c</fullName>
        <label>Level Two</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CarInformationSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarSubInformationSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VehicleBrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VehicleSeries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BClassCity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LOV</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key__c</columns>
        <columns>Level_One__c</columns>
        <columns>Level_Two__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Car_Information_Source</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Level_One__c</columns>
        <columns>Level_Two__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CarInformationSource,CarSubInformationSource</value>
        </filters>
        <label>Car Information Source</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>